--- a/src/main/resources/style/translate.css
+++ b/src/main/resources/style/translate.css
@@ -75,6 +75,10 @@
     -fx-background-color: -hover-purple-color;
 }
 
+.button-return {
+    -fx-graphic: url('../media/normal/returnButton.png');
+}
+
 /* ========================= TextField ========================= */
 
 .text-field {
