--- a/src/main/resources/GUI/DictionaryGui.fxml
+++ b/src/main/resources/GUI/DictionaryGui.fxml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="800.0" styleClass="third-color" stylesheets="@../style/navigation.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GeneralController">
+<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="817.0" styleClass="third-color" stylesheets="@../style/navigation.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GeneralController">
    <children>
-      <VBox alignment="CENTER" prefHeight="71.0" prefWidth="57.0">
+      <VBox alignment="CENTER" prefHeight="74.0" prefWidth="57.0">
          <children>
-            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="67.0" prefWidth="77.0" textFill="#b54848">
+            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="96.0" prefWidth="57.0" textFill="#b54848">
                <styleClass>
                   <String fx:value="button-favicon" />
                   <String fx:value="text-navi-bar" />
@@ -23,7 +20,7 @@
          </children>
       </VBox>
       <VBox alignment="CENTER" prefHeight="22.0" prefWidth="57.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" />
-      <VBox layoutY="81.0" prefHeight="200.0" prefWidth="57.0">
+      <VBox layoutY="66.0" prefHeight="228.0" prefWidth="57.0">
          <children>
             <Button fx:id="searchButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="56.0" text="Tra từ" textFill="#8e9297">
                <font>
@@ -33,6 +30,9 @@
                   <String fx:value="text-navi-bar" />
                   <String fx:value="button-search" />
                </styleClass>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </Button>
             <Button fx:id="transButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Google" textFill="#8e9297">
                <font>
@@ -43,7 +43,7 @@
                   <String fx:value="button-translate" />
                </styleClass>
             </Button>
-            <Button fx:id="bookmarkButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Đã lưu" textFill="#47586b">
+            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="58.0" prefWidth="57.0" text="Đã lưu" textFill="#47586b">
                <font>
                   <Font size="7.0" />
                </font>
@@ -52,7 +52,7 @@
                   <String fx:value="button-favourite" />
                </styleClass>
             </Button>
-            <Button contentDisplay="TOP" mnemonicParsing="false" prefHeight="86.0" prefWidth="57.0" text="Lịch sử" textFill="#8e9297">
+            <Button fx:id="bookmarkButton" contentDisplay="TOP" mnemonicParsing="false" prefHeight="62.0" prefWidth="58.0" text="Lịch sử" textFill="#8e9297">
                <font>
                   <Font size="7.0" />
                </font>
@@ -63,6 +63,5 @@
             </Button>
          </children>
       </VBox>
-      <VBox layoutY="547.0" prefHeight="53.0" prefWidth="57.0" />
    </children>
 </AnchorPane>
