--- a/src/main/resources/GUI/SearcherGui.fxml
+++ b/src/main/resources/GUI/SearcherGui.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="800.0" styleClass="second-color" stylesheets="@../style/search.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.SearchController">
+<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="800.0" styleClass="second-color" stylesheets="@../style/search.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.SearchController">
    <children>
-      <TextField fx:id="searchZone" layoutX="296.0" layoutY="30.0" prefHeight="35.0" prefWidth="219.0" promptText="Tra từ" />
+      <TextField fx:id="searchZone" layoutX="296.0" layoutY="30.0" prefHeight="35.0" prefWidth="219.0" promptText="Tra từ">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></TextField>
       <Button fx:id="transLanguageEV" ellipsisString="" layoutX="248.0" layoutY="30.0" mnemonicParsing="false" styleClass="button-eng-viet" />
       <VBox layoutX="29.0" layoutY="128.0" prefHeight="462.0" prefWidth="219.0" style="-fx-background-radius: 3;" styleClass="third-color" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="29.0" AnchorPane.topAnchor="128.0">
          <children>
@@ -33,22 +42,17 @@
                </font>
             </Label>
             <HBox layoutX="212.0" layoutY="-4.0" prefHeight="57.0" prefWidth="200.0" />
-            <Button fx:id="removeButton" contentDisplay="TOP" layoutX="333.0" layoutY="5.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="50.0" styleClass="button-remove" textFill="#8e9297">
+            <Button fx:id="deleteButton" contentDisplay="TOP" layoutX="256.0" layoutY="3.0" mnemonicParsing="false" onAction="#handleClickDeleteButton" prefHeight="52.0" prefWidth="50.0" styleClass="button-remove" textFill="#8e9297">
                <font>
                   <Font size="7.0" />
                </font>
             </Button>
-            <Button fx:id="editButton" contentDisplay="TOP" layoutX="288.0" layoutY="5.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="41.0" styleClass="button-edit" textFill="#4d99f5">
+            <Button fx:id="editButton" contentDisplay="TOP" layoutX="210.0" layoutY="3.0" mnemonicParsing="false" onAction="#handleClickEditButton" prefHeight="38.0" prefWidth="41.0" styleClass="button-edit" textFill="#4d99f5">
                <font>
                   <Font size="7.0" />
                </font>
             </Button>
-            <Button fx:id="bookmarkFalse" contentDisplay="TOP" layoutX="243.0" layoutY="5.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="57.0" styleClass="button-favourite-false" textFill="#8e9297">
-               <font>
-                  <Font size="7.0" />
-               </font>
-            </Button>
-            <Button fx:id="speaker1" layoutX="146.0" layoutY="14.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" styleClass="button-speak" textFill="#8e9297">
+            <Button fx:id="soundButton" layoutX="146.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleClickSoundButton" prefHeight="35.0" prefWidth="35.0" styleClass="button-speak" textFill="#8e9297">
                <font>
                   <Font size="7.0" />
                </font>
@@ -57,7 +61,11 @@
       </Pane>
       <Pane layoutX="387.0" layoutY="191.0" prefHeight="377.0" prefWidth="406.0">
          <children>
-            <TextArea fx:id="explanation" prefHeight="385.0" prefWidth="406.0" />
+            <TextArea fx:id="explanation" prefHeight="385.0" prefWidth="406.0">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></TextArea>
+            <Button fx:id="saveButton" layoutX="192.0" layoutY="332.0" mnemonicParsing="false" onAction="#handleClickSaveButton" prefWidth="3.0" styleClass="button-save1" />
          </children></Pane>
       <Line endX="200.0" fill="#8c1515" layoutX="600.0" layoutY="182.0" startX="-214.0" stroke="#ee2d2d" strokeLineJoin="BEVEL" />
       <Button fx:id="returnButton" layoutX="29.0" layoutY="20.0" mnemonicParsing="false" prefWidth="10.0" styleClass="button-return" />
