--- a/src/main/resources/GUI/SearcherGui.fxml
+++ b/src/main/resources/GUI/SearcherGui.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="800.0" styleClass="second-color" stylesheets="@../style/search.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.SearchController">
+<AnchorPane fx:id="main" prefHeight="600.0" prefWidth="800.0" styleClass="second-color" stylesheets="@../style/search.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.SearchController">
    <children>
       <TextField fx:id="searchZone" layoutX="296.0" layoutY="30.0" prefHeight="35.0" prefWidth="219.0" promptText="Tra từ">
          <font>
@@ -36,7 +29,7 @@
       </Label>
       <Pane layoutX="387.0" layoutY="128.0" prefHeight="49.0" prefWidth="412.0">
          <children>
-            <Label fx:id="englishWord" layoutX="7.0" layoutY="-4.0" prefHeight="57.0" prefWidth="170.0" text="aaaaabbbccdd" textAlignment="CENTER" textFill="#8a1111">
+            <Label fx:id="englishWord" layoutX="7.0" layoutY="-4.0" prefHeight="57.0" prefWidth="170.0" textAlignment="CENTER" textFill="#8a1111">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
