--- a/src/main/resources/GUI/GivingWordGui.fxml
+++ b/src/main/resources/GUI/GivingWordGui.fxml
@@ -7,7 +7,12 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller.GivingWordController">
     <children>
-        <Label fx:id="wordExplainLabel" layoutX="77.0" layoutY="107.0" prefHeight="31.0" prefWidth="156.0" text="Vietnamese: ">
+        <Label fx:id="" layoutX="77.0" layoutY="107.0" prefHeight="31.0" prefWidth="156.0" text="Vietnamese: ">
+            <font>
+                <Font name="System Bold" size="18.0" />
+            </font>
+        </Label>
+        <Label fx:id="wordExplainLabel" layoutX="77.0" layoutY="138.0" prefHeight="35.0" prefWidth="156.0">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
